--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -8,8 +8,18 @@
     <ul class="navbar-nav ml-auto">
      
       <li class="nav-item">
-        <a class="nav-link" href="/login/index">Sign Up / Sign In</a>
+        <a class="nav-link" href="/contato/index">Cadastrar contato</a>
+      </li>  
+
+      <% if(user) { %>
+      <li class="nav-item">
+        <a class="nav-link" href="/login/logout">Logout</a>
       </li>
+      <% } else { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login/index">Sign Up / Sign In</a>
+        </li>  
+      <% } %>
     </ul>
   </div>
 </nav>
