--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,20 +6,35 @@
 
     <div class="col-lg-8 my-3">
       <h1 class="text-center">Agenda</h1>
-      <p class="text-center lead">Seus contatos estão abaixo</p>
+
 
       <%- include('includes/messages')%>
 
+      <% if(contatos.length > 0) { %>
+      <p class="text-center lead">Seus contatos estão abaixo</p>
       <div class="responsive-table">
         <table class="table my-3">
-          <tr>
-            <td>Gabriel</td>
-            <td>Brandao</td>
-            <td>40028922</td>
-            <td>gabriel@gabriel</td>
+          <tr style="font-weight: bold;">
+            <td>Nome</td>
+            <td>Sobrenome</td>
+            <td>E-mail</td>
+            <td>Telefone</td>
           </tr>
+          <% contatos.forEach(contato => { %>
+            <tr>
+              <td><%= contato.nome%></td>
+              <td><%= contato.sobrenome%></td>
+              <td><%= contato.email%></td>
+              <td><%= contato.telefone%></td>
+              <td><a href="/contato/index/<%= contato._id%>">Editar</a></td>
+              <td><a class="text-danger" href="/contato/delete/<%= contato._id%>">Remover</a></td>
+            </tr>
+          <% }); %>
         </table>
       </div>
+      <% } else { %>
+        <p class="text-center lead">Não existem contatos salvos na agenda.</p>
+      <% } %>
     
     </div>
 
