--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,10 +11,10 @@
       <%- include('includes/messages') %>
 
       <div class="row">
-        <div class="col-lg">
+        <div class="col-lg my-3">
           <h4>Faça seu cadastro</h4>
           <p>Se você ainda não tem conta, preencha o formulário abaixo:</p>
-          <form action="/login/register" method="POST">
+          <form class="form-cadastro" action="/login/register" method="POST">
             <input type="hidden" name="_csrf" value=<%= csrfToken %> >
             <div class="form-group">
               <label>Email</label>
@@ -30,10 +30,10 @@
         </div>
 
 
-        <div class="col-lg">
+        <div class="col-lg my-3">
           <h4>Entrar no sistema</h4>
           <p>Se você já tem uma conta, faça o login abaixo:</p>
-          <form action="/login/login" method="POST">
+          <form class="form-login" action="/login/login" method="POST">
             <input type="hidden" name="_csrf" value=<%= csrfToken %> >
             <div class="form-group">
               <label>Email</label>
@@ -49,12 +49,8 @@
         </div>
       </div>
       
-    
     </div>
 
-
-
-    <div class="col-lg-2"></div>
   </div>
 </div>
 <%- include('includes/footer')%>  
